--- a/src/main/resources/assets/skyland/lang/en_us.json
+++ b/src/main/resources/assets/skyland/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "generator.skyland": "SkyLand",
-  "gamerule.qnmdLC": "qnmdLC"
+  "gamerule.qnmdLC": "qnmdLC",
+  "gamerule.chieftainMode": "Chieftain Mode"
 }
