--- a/src/main/resources/assets/skyland/lang/en_us.json
+++ b/src/main/resources/assets/skyland/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "generator.skyland": "SkyLand",
+  "generator.skyland.skyland": "SkyLand",
   "gamerule.qnmdLC": "qnmdLC",
   "gamerule.chieftainMode": "Chieftain Mode"
 }
